--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ lesson5/static
 lesson6/node_modules
 lesson6/.vscode
 lesson6/static
+lesson7/node_modules
+lesson7/.vscode
+lesson7/static
+lesson8/node_modules
+lesson8/.vscode
+lesson8/static
